--- a/css/valentinas-cool-project-768726.webflow.css
+++ b/css/valentinas-cool-project-768726.webflow.css
@@ -192,6 +192,7 @@
   display: flex;
   height: 100vh;
   max-width: 1600px;
+  min-height: 1600px;
   margin-right: auto;
   margin-left: auto;
   padding-top: 19%;
@@ -299,6 +300,11 @@
 
 .body-2 {
   height: 200vh;
+  background-image: url('../images/UNADJUSTEDNONRAW_thumb_23fa.jpg');
+  background-position: 0px 0px;
+  background-size: cover;
+  background-repeat: repeat-y;
+  background-attachment: fixed;
 }
 
 .section {
@@ -708,6 +714,7 @@
     display: -ms-flexbox;
     display: flex;
     height: auto;
+    min-height: 500px;
     padding-top: 0%;
     float: none;
     -webkit-box-pack: center;
@@ -724,6 +731,11 @@
     -webkit-align-content: flex-end;
     -ms-flex-line-pack: end;
     align-content: flex-end;
+    background-image: url('../images/UNADJUSTEDNONRAW_thumb_23fa.jpg');
+    background-position: 0% 0%;
+    background-size: cover;
+    background-repeat: repeat-y;
+    background-attachment: fixed;
     font-size: 10px;
     font-weight: 400;
   }
@@ -755,6 +767,12 @@
     -ms-grid-rows: auto auto;
     grid-template-rows: auto auto;
     background-color: #fff;
+  }
+
+  .image {
+    width: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
   }
 
   .body-2 {
