--- a/css/valentinas-cool-project-768726.webflow.css
+++ b/css/valentinas-cool-project-768726.webflow.css
@@ -675,9 +675,9 @@
     -webkit-align-items: flex-end;
     -ms-flex-align: end;
     align-items: flex-end;
-    -webkit-align-self: flex-end;
-    -ms-flex-item-align: end;
-    align-self: flex-end;
+    -webkit-align-self: flex-start;
+    -ms-flex-item-align: start;
+    align-self: flex-start;
     -webkit-box-flex: 0;
     -webkit-flex: 0 auto;
     -ms-flex: 0 auto;
@@ -715,14 +715,15 @@
     display: -ms-flexbox;
     display: flex;
     height: auto;
-    min-height: 400px;
-    margin-top: -167px;
+    min-height: 800px;
+    margin-top: -8px;
+    margin-bottom: 11px;
     padding-top: 0%;
     float: none;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
