--- a/css/valentinas-cool-project-768726.webflow.css
+++ b/css/valentinas-cool-project-768726.webflow.css
@@ -425,6 +425,9 @@
 }
 
 .section-3 {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
   background-image: url('../images/UNADJUSTEDNONRAW_thumb_23fa.jpg');
   background-position: 50% 50%;
   background-size: 100%;
@@ -735,7 +738,7 @@
     display: -ms-flexbox;
     display: flex;
     height: auto;
-    min-height: 400px;
+    min-height: 800px;
     margin-top: -8px;
     margin-bottom: 11px;
     padding-top: 0%;
@@ -794,7 +797,7 @@
   }
 
   .body-2 {
-    height: 800px;
+    height: 200vh;
     background-image: none;
   }
 
@@ -889,6 +892,8 @@
   .section-3 {
     position: fixed;
     z-index: 1;
+    width: 100%;
+    height: 100vh;
     background-position: 0% 0%;
     background-size: auto;
     background-repeat: repeat-y;
